--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hookform/resolvers",
   "amdName": "hookformResolvers",
   "version": "1.3.1",
-  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest, Class Validator and etc.",
+  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest, Class Validator, io-ts and Nope.",
   "main": "dist/resolvers.js",
   "module": "dist/resolvers.module.js",
   "umd:main": "dist/resolvers.umd.js",
@@ -57,6 +57,12 @@
       "import": "./io-ts/dist/io-ts.mjs",
       "require": "./io-ts/dist/io-ts.js"
     },
+    "./nope": {
+      "browser": "./nope/dist/nope.module.js",
+      "umd": "./nope/dist/nope.umd.js",
+      "import": "./nope/dist/nope.mjs",
+      "require": "./nope/dist/nope.js"
+    },
     "./package.json": "./package.json",
     "./": "./"
   },
@@ -82,7 +88,10 @@
     "class-validator/dist",
     "io-ts/package.json",
     "io-ts/src",
-    "io-ts/dist"
+    "io-ts/dist",
+    "nope/package.json",
+    "nope/src",
+    "nope/dist"
   ],
   "publishConfig": {
     "access": "public"
@@ -98,6 +107,7 @@
     "build:io-ts": "microbundle --cwd io-ts --globals '@hookform/resolvers=hookformResolvers'",
     "build:vest": "microbundle --cwd vest --globals '@hookform/resolvers=hookformResolvers'",
     "build:class-validator": "microbundle --cwd class-validator --globals '@hookform/resolvers=hookformResolvers'",
+    "build:nope": "microbundle --cwd nope --globals '@hookform/resolvers=hookformResolvers'",
     "postbuild": "node ./config/node-13-exports.js",
     "lint": "eslint . --ext .ts,.js --ignore-path .gitignore",
     "lint:types": "tsc",
@@ -118,7 +128,8 @@
     "zod",
     "vest",
     "class-validator",
-    "io-ts"
+    "io-ts",
+    "nope"
   ],
   "repository": {
     "type": "git",
@@ -154,6 +165,7 @@
     "microbundle": "^0.13.0",
     "monocle-ts": "^2.3.9",
     "newtype-ts": "^0.3.4",
+    "nope-validator": "^0.12.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
