--- a/package.json
+++ b/package.json
@@ -142,25 +142,26 @@
   },
   "homepage": "https://react-hook-form.com",
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.3",
-    "@types/jest": "^26.0.20",
-    "@types/react": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.8",
+    "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "check-export-map": "^1.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "fp-ts": "^2.7.0",
+    "computed-types": "^1.6.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "fp-ts": "^2.10.5",
     "husky": "^4.3.8",
     "io-ts": "^2.0.0",
     "io-ts-types": "^0.5.16",
     "jest": "^26.6.3",
-    "joi": "^17.3.0",
+    "joi": "^17.4.0",
     "lint-staged": "^10.5.3",
     "microbundle": "^0.13.0",
     "monocle-ts": "^2.3.9",
@@ -168,16 +169,16 @@
     "nope-validator": "^0.12.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-hook-form": "^7.0.0-alpha.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "7.0.0",
     "reflect-metadata": "^0.1.13",
     "superstruct": "^0.14.0",
-    "ts-jest": "^26.5.0",
-    "typescript": "^4.1.3",
+    "ts-jest": "^26.5.6",
+    "typescript": "^4.2.4",
     "vest": "^3.1.2",
-    "yup": "^0.32.8",
-    "zod": "^1.11.11"
+    "yup": "^0.32.9",
+    "zod": "^1.11.17"
   },
   "peerDependencies": {
     "react-hook-form": "^7.0.0"
