--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "access": "public"
   },
   "scripts": {
-    "prepare": "run-s build:src build && check-export-map",
+    "prepare": "run-s build:src build && check-export-map && husky install",
     "build": "npm-run-all --parallel build:*",
     "build:src": "microbundle build",
     "build:zod": "microbundle --cwd zod --globals '@hookform/resolvers=hookformResolvers'",
@@ -153,27 +153,27 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "computed-types": "^1.6.0",
-    "eslint": "^7.25.0",
+    "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "fp-ts": "^2.10.5",
-    "husky": "^4.3.8",
+    "husky": "^6.0.0",
     "io-ts": "^2.0.0",
     "io-ts-types": "^0.5.16",
     "jest": "^26.6.3",
     "joi": "^17.4.0",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^11.0.0",
     "microbundle": "^0.13.0",
     "monocle-ts": "^2.3.9",
     "newtype-ts": "^0.3.4",
-    "nope-validator": "^0.12.2",
+    "nope-validator": "^1.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "7.0.0",
     "reflect-metadata": "^0.1.13",
-    "superstruct": "^0.14.0",
+    "superstruct": "^0.15.2",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4",
     "vest": "^3.1.2",
@@ -182,11 +182,6 @@
   },
   "peerDependencies": {
     "react-hook-form": "^7.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint:types && lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,ts}": [
