--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hookform/resolvers",
   "amdName": "hookformResolvers",
   "version": "1.3.1",
-  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest, Class Validator, io-ts and Nope.",
+  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest, Class Validator, io-ts, Nope and computed-types",
   "main": "dist/resolvers.js",
   "module": "dist/resolvers.module.js",
   "umd:main": "dist/resolvers.umd.js",
@@ -63,6 +63,12 @@
       "import": "./nope/dist/nope.mjs",
       "require": "./nope/dist/nope.js"
     },
+    "./computed-types": {
+      "browser": "./computed-types/dist/computed-types.module.js",
+      "umd": "./computed-types/dist/computed-types.umd.js",
+      "import": "./computed-types/dist/computed-types.mjs",
+      "require": "./computed-types/dist/computed-types.js"
+    },
     "./package.json": "./package.json",
     "./": "./"
   },
@@ -91,7 +97,10 @@
     "io-ts/dist",
     "nope/package.json",
     "nope/src",
-    "nope/dist"
+    "nope/dist",
+    "computed-types/package.json",
+    "computed-types/src",
+    "computed-types/dist"
   ],
   "publishConfig": {
     "access": "public"
@@ -108,6 +117,7 @@
     "build:vest": "microbundle --cwd vest --globals '@hookform/resolvers=hookformResolvers'",
     "build:class-validator": "microbundle --cwd class-validator --globals '@hookform/resolvers=hookformResolvers'",
     "build:nope": "microbundle --cwd nope --globals '@hookform/resolvers=hookformResolvers'",
+    "build:computed-types": "microbundle --cwd computed-types --globals '@hookform/resolvers=hookformResolvers'",
     "postbuild": "node ./config/node-13-exports.js",
     "lint": "eslint . --ext .ts,.js --ignore-path .gitignore",
     "lint:types": "tsc",
@@ -129,7 +139,8 @@
     "vest",
     "class-validator",
     "io-ts",
-    "nope"
+    "nope",
+    "computed-types"
   ],
   "repository": {
     "type": "git",
