--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hookform/resolvers",
   "amdName": "hookformResolvers",
   "version": "1.3.1",
-  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest, Class Validator, io-ts, Nope and computed-types",
+  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest, Class Validator, io-ts, Nope, computed-types and Typanion",
   "main": "dist/resolvers.js",
   "module": "dist/resolvers.module.js",
   "umd:main": "dist/resolvers.umd.js",
@@ -69,6 +69,12 @@
       "import": "./computed-types/dist/computed-types.mjs",
       "require": "./computed-types/dist/computed-types.js"
     },
+    "./typanion": {
+      "browser": "./typanion/dist/typanion.module.js",
+      "umd": "./typanion/dist/typanion.umd.js",
+      "import": "./typanion/dist/typanion.mjs",
+      "require": "./typanion/dist/typanion.js"
+    },
     "./package.json": "./package.json",
     "./": "./"
   },
@@ -100,7 +106,10 @@
     "nope/dist",
     "computed-types/package.json",
     "computed-types/src",
-    "computed-types/dist"
+    "computed-types/dist",
+    "typanion/package.json",
+    "typanion/src",
+    "typanion/dist"
   ],
   "publishConfig": {
     "access": "public"
@@ -118,6 +127,7 @@
     "build:class-validator": "microbundle --cwd class-validator --globals '@hookform/resolvers=hookformResolvers'",
     "build:nope": "microbundle --cwd nope --globals '@hookform/resolvers=hookformResolvers'",
     "build:computed-types": "microbundle --cwd computed-types --globals '@hookform/resolvers=hookformResolvers'",
+    "build:typanion": "microbundle --cwd typanion --globals '@hookform/resolvers=hookformResolvers'",
     "postbuild": "node ./config/node-13-exports.js",
     "lint": "eslint . --ext .ts,.js --ignore-path .gitignore",
     "lint:types": "tsc",
@@ -140,7 +150,8 @@
     "class-validator",
     "io-ts",
     "nope",
-    "computed-types"
+    "computed-types",
+    "typanion"
   ],
   "repository": {
     "type": "git",
@@ -185,6 +196,7 @@
     "reflect-metadata": "^0.1.13",
     "superstruct": "^0.15.2",
     "ts-jest": "^27.0.1",
+    "typanion": "^3.3.2",
     "typescript": "^4.3.2",
     "vest": "^3.2.3",
     "yup": "^0.32.9",
