fix globals name

--- a/package.json
+++ b/package.json
@@ -114,18 +114,18 @@
   "scripts": {
     "prepare": "run-s build:src build && check-export-map && husky install",
     "build": "npm-run-all --parallel build:*",
-    "build:src": "microbundle build",
-    "build:zod": "microbundle --cwd zod --globals '@hookform/resolvers=hookformResolvers'",
-    "build:yup": "microbundle --cwd yup --globals '@hookform/resolvers=hookformResolvers'",
-    "build:joi": "microbundle --cwd joi --globals '@hookform/resolvers=hookformResolvers'",
-    "build:superstruct": "microbundle --cwd superstruct --globals '@hookform/resolvers=hookformResolvers'",
-    "build:io-ts": "microbundle --cwd io-ts --globals '@hookform/resolvers=hookformResolvers'",
-    "build:vest": "microbundle --cwd vest --globals '@hookform/resolvers=hookformResolvers'",
-    "build:class-validator": "microbundle --cwd class-validator --globals '@hookform/resolvers=hookformResolvers'",
-    "build:nope": "microbundle --cwd nope --globals '@hookform/resolvers=hookformResolvers'",
-    "build:computed-types": "microbundle --cwd computed-types --globals '@hookform/resolvers=hookformResolvers'",
-    "build:typanion": "microbundle --cwd typanion --globals '@hookform/resolvers=hookformResolvers'",
-    "build:ajv": "microbundle --cwd ajv --globals '@hookform/resolvers=hookformResolvers'",
+    "build:src": "microbundle --globals react-hook-form=ReactHookForm",
+    "build:zod": "microbundle --cwd zod --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
+    "build:yup": "microbundle --cwd yup --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
+    "build:joi": "microbundle --cwd joi --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
+    "build:superstruct": "microbundle --cwd superstruct --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
+    "build:io-ts": "microbundle --cwd io-ts --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
+    "build:vest": "microbundle --cwd vest --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
+    "build:class-validator": "microbundle --cwd class-validator --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
+    "build:nope": "microbundle --cwd nope --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
+    "build:computed-types": "microbundle --cwd computed-types --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
+    "build:typanion": "microbundle --cwd typanion --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
+    "build:ajv": "microbundle --cwd ajv --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
     "postbuild": "node ./config/node-13-exports.js",
     "lint": "eslint . --ext .ts,.js --ignore-path .gitignore",
     "lint:types": "tsc",
