--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,26 +18,32 @@ jobs:
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Use Node ${{ matrix.node }}
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7
+
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
 
-      - name: Install deps and build (with cache)
-        uses: bahmutov/npm-install@v1
+      - name: Install dependencies
+        run: pnpm install
 
       - name: Lint
         run: |
-          yarn lint
-          yarn lint:types
+          pnpm lint
+          pnpm lint:types
 
       - name: Test
-        run: yarn test --ci
+        run: pnpm test
 
       - name: Build
-        run: yarn build
+        run: pnpm build
 
   publish-module:
     name: 'Publish Module to NPM on Node ${{ matrix.node }} and ${{ matrix.os }}'
@@ -46,16 +52,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
-      - name: 'Use Node ${{ matrix.node }}'
+        uses: actions/checkout@v3
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7
+
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 18
-          registry-url: 'https://registry.npmjs.org/'
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
+
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+        run: pnpm install
       - name: Build
-        run: yarn build
+        run: pnpm build
       - name: Publish
         run: npx semantic-release
         env:
