--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,5 @@
-package-lock=false
+public-hoist-pattern[]=*eslint*
+public-hoist-pattern[]=*prettier*
+public-hoist-pattern[]=@types*
+auto-install-peers=true
+enable-pre-post-scripts=true
