--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
   },
   "scripts": {
     "prepare": "run-s build:src build && check-export-map && husky install",
-    "build": "npm-run-all --parallel build:*",
+    "build": "npm-run-all --parallel 'build:*'",
     "build:src": "microbundle build --globals react-hook-form=ReactHookForm",
     "build:zod": "microbundle --cwd zod --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
     "build:yup": "microbundle --cwd yup --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
@@ -129,8 +129,8 @@
     "postbuild": "node ./config/node-13-exports.js",
     "lint": "eslint . --ext .ts,.js --ignore-path .gitignore",
     "lint:types": "tsc",
-    "test": "jest",
-    "test:watch": "yarn test --watchAll --coverage --runInBand",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
     "check:all": "npm-run-all --parallel lint:* test"
   },
   "keywords": [
@@ -163,52 +163,57 @@
   },
   "homepage": "https://react-hook-form.com",
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/react": "^17.0.38",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "ajv": "^8.11.0",
+    "@testing-library/dom": "^9.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/node": "^18.15.3",
+    "@types/react": "^18.0.28",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0",
-    "check-export-map": "^1.2.0",
+    "check-export-map": "^1.3.0",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "computed-types": "^1.11.1",
-    "eslint": "^7.27.0",
-    "eslint-config-prettier": "^8.3.0",
-    "fp-ts": "^2.11.8",
-    "husky": "^7.0.4",
-    "io-ts": "^2.0.0",
-    "io-ts-types": "^0.5.16",
-    "jest": "^27.4.7",
-    "joi": "^17.5.0",
-    "lint-staged": "^12.1.7",
-    "microbundle": "^0.14.2",
-    "monocle-ts": "^2.3.12",
+    "class-validator": "^0.14.0",
+    "computed-types": "^1.11.2",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "fp-ts": "^2.13.1",
+    "husky": "^8.0.3",
+    "io-ts": "^2.2.20",
+    "io-ts-types": "^0.5.19",
+    "joi": "^17.8.4",
+    "jsdom": "^21.1.1",
+    "lint-staged": "^13.2.0",
+    "microbundle": "^0.15.1",
+    "monocle-ts": "^2.3.13",
     "newtype-ts": "^0.3.5",
-    "nope-validator": "^1.0.0",
+    "nope-validator": "^1.0.4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.33.0",
+    "prettier": "^2.8.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.6",
     "reflect-metadata": "^0.1.13",
-    "superstruct": "^0.15.3",
-    "ts-jest": "^27.1.3",
-    "typanion": "^3.7.1",
-    "typescript": "^4.5.4",
-    "vest": "^4.0.3",
+    "superstruct": "^1.0.3",
+    "typanion": "^3.12.1",
+    "typescript": "^5.0.2",
+    "vest": "^4.6.9",
+    "vite": "^4.2.0",
+    "vite-tsconfig-paths": "^4.0.7",
+    "vitest": "^0.29.3",
     "yup": "^0.32.11",
-    "zod": "^3.11.6"
+    "zod": "^3.21.4"
   },
   "peerDependencies": {
     "react-hook-form": "^7.0.0"
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "yarn lint --fix"
+      "pnpm lint --fix"
     ],
     "*.{md,json,yml}": [
       "prettier --write"
