--- a/ajv/package.json
+++ b/ajv/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "peerDependencies": {
     "react-hook-form": "^7.0.0",
-    "@hookform/resolvers": "^2.0.0"
+    "@hookform/resolvers": "^2.0.0",
+    "ajv": "^8.12.0",
+    "ajv-errors": "^3.0.0"
   }
 }
