--- a/package.json
+++ b/package.json
@@ -10,61 +10,73 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "umd": "./dist/resolvers.umd.js",
       "import": "./dist/resolvers.mjs",
       "require": "./dist/resolvers.js"
     },
     "./zod": {
+      "types": "./zod/dist/index.d.ts",
       "umd": "./zod/dist/zod.umd.js",
       "import": "./zod/dist/zod.mjs",
       "require": "./zod/dist/zod.js"
     },
     "./yup": {
+      "types": "./yup/dist/index.d.ts",
       "umd": "./yup/dist/yup.umd.js",
       "import": "./yup/dist/yup.mjs",
       "require": "./yup/dist/yup.js"
     },
     "./joi": {
+      "types": "./joi/dist/index.d.ts",
       "umd": "./joi/dist/joi.umd.js",
       "import": "./joi/dist/joi.mjs",
       "require": "./joi/dist/joi.js"
     },
     "./vest": {
+      "types": "./vest/dist/index.d.ts",
       "umd": "./vest/dist/vest.umd.js",
       "import": "./vest/dist/vest.mjs",
       "require": "./vest/dist/vest.js"
     },
     "./superstruct": {
+      "types": "./superstruct/dist/index.d.ts",
       "umd": "./superstruct/dist/superstruct.umd.js",
       "import": "./superstruct/dist/superstruct.mjs",
       "require": "./superstruct/dist/superstruct.js"
     },
     "./class-validator": {
+      "types": "./class-validator/dist/index.d.ts",
       "umd": "./class-validator/dist/class-validator.umd.js",
       "import": "./class-validator/dist/class-validator.mjs",
       "require": "./class-validator/dist/class-validator.js"
     },
     "./io-ts": {
+      "types": "./io-ts/dist/index.d.ts",
       "umd": "./io-ts/dist/io-ts.umd.js",
       "import": "./io-ts/dist/io-ts.mjs",
       "require": "./io-ts/dist/io-ts.js"
     },
     "./nope": {
+      "types": "./nope/dist/index.d.ts",
       "umd": "./nope/dist/nope.umd.js",
       "import": "./nope/dist/nope.mjs",
       "require": "./nope/dist/nope.js"
     },
     "./computed-types": {
+      "types": "./computed-types/dist/index.d.ts",
       "umd": "./computed-types/dist/computed-types.umd.js",
       "import": "./computed-types/dist/computed-types.mjs",
       "require": "./computed-types/dist/computed-types.js"
     },
     "./typanion": {
+      "types": "./typanion/dist/index.d.ts",
       "umd": "./typanion/dist/typanion.umd.js",
       "import": "./typanion/dist/typanion.mjs",
       "require": "./typanion/dist/typanion.js"
     },
     "./ajv": {
+      "types": "./ajv/dist/index.d.ts",
       "umd": "./ajv/dist/ajv.umd.js",
       "import": "./ajv/dist/ajv.mjs",
       "require": "./ajv/dist/ajv.js"
