chore: add npm otken logic

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,12 @@ jobs:
         run: pnpm install
       - name: Build
         run: pnpm build
+
+      - name: Npm token
+        run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+        env:
+          NPM_TOKEN: '${{secrets.NPM_TOKEN}}'
+
       - name: Publish
         run: npx semantic-release
         env:
