--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hookform/resolvers",
   "amdName": "hookformResolvers",
   "version": "2.9.1",
-  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest, Class Validator, io-ts, Nope, computed-types, TypeBox and Typanion",
+  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest, Class Validator, io-ts, Nope, computed-types, TypeBox, arktype and Typanion",
   "main": "dist/resolvers.js",
   "module": "dist/resolvers.module.js",
   "umd:main": "dist/resolvers.umd.js",
@@ -87,6 +87,12 @@
       "import": "./ajv/dist/ajv.mjs",
       "require": "./ajv/dist/ajv.js"
     },
+    "./arktype": {
+      "types": "./arktype/dist/index.d.ts",
+      "umd": "./arktype/dist/arktype.umd.js",
+      "import": "./arktype/dist/arktype.mjs",
+      "require": "./arktype/dist/arktype.js"
+    },
     "./package.json": "./package.json",
     "./*": "./*"
   },
@@ -127,7 +133,10 @@
     "ajv/dist",
     "typebox/package.json",
     "typebox/src",
-    "typebox/dist"
+    "typebox/dist",
+    "arktype/package.json",
+    "arktype/src",
+    "arktype/dist"
   ],
   "publishConfig": {
     "access": "public"
@@ -148,6 +157,7 @@
     "build:typanion": "microbundle --cwd typanion --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
     "build:ajv": "microbundle --cwd ajv --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
     "build:typebox": "microbundle --cwd typebox --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm,@sinclair/typebox/value=value",
+    "build:arktype": "microbundle --cwd arktype --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
     "postbuild": "node ./config/node-13-exports.js",
     "lint": "eslint . --ext .ts,.js --ignore-path .gitignore",
     "lint:types": "tsc",
@@ -173,7 +183,8 @@
     "computed-types",
     "typanion",
     "ajv",
-    "TypeBox"
+    "TypeBox",
+    "arktype"
   ],
   "repository": {
     "type": "git",
@@ -199,6 +210,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0",
+    "arktype": "1.0.13-alpha",
     "check-export-map": "^1.3.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
