--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hookform/resolvers",
   "amdName": "hookformResolvers",
   "version": "2.9.1",
-  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest, Class Validator, io-ts, Nope, computed-types, TypeBox and Typanion",
+  "description": "React Hook Form validation resolvers: Yup, Joi, Superstruct, Zod, Vest, Class Validator, io-ts, Nope, computed-types, TypeBox, arktype and Typanion",
   "main": "dist/resolvers.js",
   "module": "dist/resolvers.module.js",
   "umd:main": "dist/resolvers.umd.js",
@@ -87,6 +87,12 @@
       "import": "./ajv/dist/ajv.mjs",
       "require": "./ajv/dist/ajv.js"
     },
+    "./arktype": {
+      "types": "./arktype/dist/index.d.ts",
+      "umd": "./arktype/dist/arktype.umd.js",
+      "import": "./arktype/dist/arktype.mjs",
+      "require": "./arktype/dist/arktype.js"
+    },
     "./package.json": "./package.json",
     "./*": "./*"
   },
@@ -127,7 +133,10 @@
     "ajv/dist",
     "typebox/package.json",
     "typebox/src",
-    "typebox/dist"
+    "typebox/dist",
+    "arktype/package.json",
+    "arktype/src",
+    "arktype/dist"
   ],
   "publishConfig": {
     "access": "public"
@@ -148,6 +157,7 @@
     "build:typanion": "microbundle --cwd typanion --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
     "build:ajv": "microbundle --cwd ajv --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
     "build:typebox": "microbundle --cwd typebox --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm,@sinclair/typebox/value=value",
+    "build:arktype": "microbundle --cwd arktype --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
     "postbuild": "node ./config/node-13-exports.js",
     "lint": "eslint . --ext .ts,.js --ignore-path .gitignore",
     "lint:types": "tsc",
@@ -173,7 +183,8 @@
     "computed-types",
     "typanion",
     "ajv",
-    "TypeBox"
+    "TypeBox",
+    "arktype"
   ],
   "repository": {
     "type": "git",
@@ -186,25 +197,26 @@
   },
   "homepage": "https://react-hook-form.com",
   "devDependencies": {
-    "@sinclair/typebox": "^0.26.3",
-    "@testing-library/dom": "^9.0.1",
+    "@sinclair/typebox": "^0.27.6",
+    "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/node": "^18.15.7",
-    "@types/react": "^18.0.28",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.35",
     "@types/testing-library__jest-dom": "^5.14.5",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "@vitejs/plugin-react": "^3.1.0",
     "ajv": "^8.12.0",
     "ajv-errors": "^3.0.0",
+    "arktype": "1.0.13-alpha",
     "check-export-map": "^1.3.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "computed-types": "^1.11.2",
     "cross-env": "^7.0.3",
-    "eslint": "^8.36.0",
+    "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "fp-ts": "^2.13.1",
     "husky": "^8.0.3",
@@ -212,7 +224,7 @@
     "io-ts-types": "^0.5.19",
     "joi": "^17.9.1",
     "jsdom": "^21.1.1",
-    "lint-staged": "^13.2.0",
+    "lint-staged": "^13.2.1",
     "microbundle": "^0.15.1",
     "monocle-ts": "^2.3.13",
     "newtype-ts": "^0.3.5",
@@ -221,16 +233,16 @@
     "prettier": "^2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.7",
+    "react-hook-form": "^7.43.9",
     "reflect-metadata": "^0.1.13",
     "superstruct": "^1.0.3",
     "typanion": "^3.12.1",
-    "typescript": "^5.0.2",
+    "typescript": "^5.0.4",
     "vest": "^4.6.9",
     "vite": "^4.2.1",
-    "vite-tsconfig-paths": "^4.0.7",
-    "vitest": "^0.29.7",
-    "yup": "^1.0.2",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.30.1",
+    "yup": "^1.1.0",
     "zod": "^3.21.4"
   },
   "peerDependencies": {
