build: fix build script

--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
   },
   "scripts": {
     "prepare": "run-s build:src build && check-export-map && husky install",
-    "build": "cross-env npm-run-all --parallel 'build:*'",
+    "build": "cross-env npm-run-all --sequential 'build:*'",
     "build:src": "microbundle build --globals react-hook-form=ReactHookForm",
     "build:zod": "microbundle --cwd zod --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
     "build:yup": "microbundle --cwd yup --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
