--- a/package.json
+++ b/package.json
@@ -152,7 +152,9 @@
   },
   "scripts": {
     "prepare": "run-s build:src build && check-export-map && husky install",
-    "build": "cross-env npm-run-all --parallel 'build:*'",
+    "build": "pnpm build-p",
+    "build-p": "cross-env npm-run-all --parallel 'build:*'",
+    "build-s": "cross-env npm-run-all --sequential 'build:*'",
     "build:src": "microbundle build --globals react-hook-form=ReactHookForm",
     "build:zod": "microbundle --cwd zod --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
     "build:yup": "microbundle --cwd yup --globals @hookform/resolvers=hookformResolvers,react-hook-form=ReactHookForm",
@@ -173,9 +175,7 @@
     "lint:types": "tsc",
     "test": "vitest run",
     "test:watch": "vitest watch",
-    "check:all": "npm-run-all --parallel lint:* test",
-    "csb:install": "pnpm i --no-frozen-lockfile",
-    "csb:build": "cross-env npm-run-all --sequential 'build:*'"
+    "check:all": "npm-run-all --parallel lint:* test"
   },
   "keywords": [
     "scheme",
