--- a/package.json
+++ b/package.json
@@ -174,7 +174,7 @@
     "test": "vitest run",
     "test:watch": "vitest watch",
     "check:all": "npm-run-all --parallel lint:* test",
-    "csb:install": "pnpx replace-json-property@1.9.0 package.json prepare \"''\" && pnpm i --no-frozen-lockfile",
+    "csb:install": "pnpx replace-json-property@1.9.0 package.json prepare \"node -e 'process.exit(0)'\" && pnpm i --no-frozen-lockfile",
     "csb:build": "cross-env npm-run-all --sequential 'build:*'"
   },
   "keywords": [
