ci(codesandbox): fix CodeSandbox CI setting (#638)
* ci(codesandbox): upgrade node version

* ci(codesandbox): upgrade node version

* build: fix build script

* Revert "build: fix build script"

This reverts commit 415af591e014e5f29d25846c282c9692e7ed762f.

* build: add sequential build script for codesandbox ci

* ci(codesandbox): fix commands

* Revert "ci(codesandbox): fix commands"

This reverts commit 6e23d774229605bcea8bc56e5ecd641c119ba8ba.

* ci(codesandbox): fix commands

* ci(codesandbox): fix install command

* ci(codesandbox): fix install command

* ci(codesandbox): fix install command

* ci(codesandbox): fix install command

* ci(codesandbox): fix install command

* ci(codesandbox): fix install command

--- a/package.json
+++ b/package.json
@@ -173,7 +173,9 @@
     "lint:types": "tsc",
     "test": "vitest run",
     "test:watch": "vitest watch",
-    "check:all": "npm-run-all --parallel lint:* test"
+    "check:all": "npm-run-all --parallel lint:* test",
+    "csb:install": "pnpx replace-json-property@1.9.0 package.json prepare \"node -e 'process.exit(0)'\" && pnpm i --no-frozen-lockfile",
+    "csb:build": "cross-env npm-run-all --sequential 'build:*'"
   },
   "keywords": [
     "scheme",
