fix: migrate set to lodash.set package (#684)
* fix: migrate set to dset package

* update type package

--- a/package.json
+++ b/package.json
@@ -280,5 +280,9 @@
     "*.{md,json,yml}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "@types/lodash.set": "^4.3.9",
+    "lodash.set": "^4.3.2"
   }
 }
